# SentimentIQ

./: .gitignore  main.py  pyproject.toml
backend/: preprocess.py
notebooks/: 00_download_datasets.ipynb  01_sentiment_exploration.ipynb  02_emotion_exploration.ipynb  03_go_emotions_exploration.ipynb
